--- a/bootstrap/01-grid.html
+++ b/bootstrap/01-grid.html
@@ -13,13 +13,13 @@
     <div class="container">
       <h2>Bootstrap Grid System Example</h2>
       <div class="row">
-        <div class="col">
+        <div class="col-sm-12 col-md-4">
           <div class="bg-primary text-white p-3">Column 1</div>
         </div>
-        <div class="col">
+        <div class="col-sm-12 col-md-4">
           <div class="bg-secondary text-white p-3">Column 2</div>
         </div>
-        <div class="col">
+        <div class="col-sm-12 col-md-4">
           <div class="bg-success text-white p-3">Column 3</div>
         </div>
       </div>
