--- a/html/01-basic.html
+++ b/html/01-basic.html
@@ -23,7 +23,10 @@
     <title>My First HTML Page</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <p>This is a paragraph.</p>
+    <h4>Hello, World!</h4>
+    <div>
+      <p>This is a paragraph.</p>
+      <p>Here is another paragraph</p>
+    </div>
   </body>
 </html>
