--- a/html/03-images.html
+++ b/html/03-images.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>My Favorite Image</h1>
-    <img src="https://picsum.photos/200" alt="A beautiful image" />
+    <img src="https://picsum.photos/200" alt="A beautiful image" height="100" />
     <img src="https://picsum.photos/200" alt="A beautiful image" />
     <div>
       <img src="https://picsum.photos/500" alt="A beautiful image" />
