--- a/html/07-links.html
+++ b/html/07-links.html
@@ -8,8 +8,12 @@
   <body>
     <h1>My Favorite Websites</h1>
     <ul>
-      <li><a href="https://www.example.com">Example</a></li>
-      <li><a href="https://www.google.com">Google</a></li>
+      <li>
+        <a href="https://www.example.com">Example</a>
+      </li>
+      <li>
+        <a href="https://www.google.com" target="_blank">Google</a>
+      </li>
       <li><a href="https://www.github.com">GitHub</a></li>
     </ul>
   </body>
