--- a/html/02-navbar.html
+++ b/html/02-navbar.html
@@ -10,8 +10,8 @@
       <h1>Welcome to My Website</h1>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="https://klix.ba" target="_blank">Klix</a></li>
+          <li><a href="https://facebook.com">Fb</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
