--- a/html/04-forms.html
+++ b/html/04-forms.html
@@ -18,7 +18,7 @@
       <input type="password" id="password" name="password" /><br /><br />
 
       <label for="number">Number Input:</label><br />
-      <input type="number" id="number" name="number" /><br /><br />
+      <input type="number" id="number" name="number" step="0.01" /><br /><br />
 
       <label for="date">Date Input:</label><br />
       <input type="date" id="date" name="date" /><br /><br />
@@ -31,11 +31,18 @@
         value="checkbox"
       /><br /><br />
 
-      <label for="radio1">Radio Button 1:</label>
-      <input type="radio" id="radio1" name="radio" value="radio1" /><br />
+      <div>
+        <label for="radio1">Radio Button 1:</label>
+        <input type="radio" id="radio1" name="radio" value="radio1" /><br />
 
-      <label for="radio2">Radio Button 2:</label>
-      <input type="radio" id="radio2" name="radio" value="radio2" /><br /><br />
+        <label for="radio2">Radio Button 2:</label>
+        <input
+          type="radio"
+          id="radio2"
+          name="radio"
+          value="radio2"
+        /><br /><br />
+      </div>
 
       <label for="select">Select:</label><br />
       <select id="select" name="select">
@@ -45,7 +52,7 @@
       ><br /><br />
 
       <label for="textarea">Textarea:</label><br />
-      <textarea id="textarea" name="textarea" rows="4" cols="50"></textarea
+      <textarea id="textarea" name="textarea" rows="10" cols="100"></textarea
       ><br /><br />
 
       <input type="submit" value="Submit" />
