--- a/utility-libraries/datatables/index.html
+++ b/utility-libraries/datatables/index.html
@@ -498,11 +498,11 @@
     <script>
       new DataTable("#example");
 
-      new DataTable("#example", {
-        info: false,
-        ordering: false,
-        paging: false,
-      });
+      //   new DataTable("#example", {
+      //     info: false,
+      //     ordering: false,
+      //     paging: false,
+      //   });
 
       new DataTable("#example", {
         ajax: "data/objects.txt",
@@ -516,11 +516,11 @@
         ],
       });
 
-      new DataTable("#example", {
-        ajax: "scripts/server_processing.php",
-        processing: true,
-        serverSide: true,
-      });
+      //   new DataTable("#example", {
+      //     ajax: "scripts/server_processing.php",
+      //     processing: true,
+      //     serverSide: true,
+      //   });
     </script>
   </body>
 </html>
