--- a/forms/forms.html
+++ b/forms/forms.html
@@ -119,7 +119,7 @@
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/js/jquery.validate.min.js"></script>
     <script src="../assets/js/additional-methods.min.js"></script>
-    <script src="../assets//js/block-ui.js"></script>
+    <script src="../assets/js/block-ui.js"></script>
     <script src="../assets/js/dataTables.js"></script>
     <script src="../assets/js/dataTables.bootstrap5.js"></script>
     <script>
