--- a/dentist-frontent/index.html
+++ b/dentist-frontent/index.html
@@ -10,6 +10,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Dashboard - SB Admin</title>
+    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./assets/css/dataTables-latest.css" rel="stylesheet" />
     <link href="./assets/css/styles.css" rel="stylesheet" />
     <link href="./assets/css/spapp.css" rel="stylesheet" />
     <link href="./assets/css/spinkit.css" rel="stylesheet" />
@@ -234,7 +236,7 @@
           </div>
         </footer>
       </div>
-    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/jquery-3.7.1-latest.js"></script>
     <script src="./assets/js/jquery.spapp.min.js"></script>
     <script
       src="./assets/js/bootstrap.bundle.min.js"
@@ -245,6 +247,8 @@
     <script src="./assets/js/block-ui.js"></script>
     <script src="./assets/js/scripts.js"></script>
     <script src="./assets/js/toastr.min.js"></script>
+
+    <script src="./assets/js/dataTables-latest.js"></script>
 
     <script src="./utils/constants.js"></script>
     <script src="./utils/utils.js"></script>
