--- a/dentist-frontent/pages/dashboard.html
+++ b/dentist-frontent/pages/dashboard.html
@@ -71,7 +71,7 @@
     </div>
     <div class="card-body">
       <div class="table-responsive">
-        <table class="table table-striped table-responsive">
+        <!-- <table class="table table-striped table-responsive">
           <thead>
             <tr>
               <th>Name</th>
@@ -550,6 +550,28 @@
               <td>$112,000</td>
             </tr>
           </tbody>
+        </table> -->
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-4">
+    <div class="card-header">
+      <i class="fas fa-table me-1"></i>
+      DataTable Example
+    </div>
+    <div class="card-body">
+      <div class="table-responsive">
+        <table
+          class="table table-striped table-bordered table-hover table-responsive"
+          id="tbl_customers"
+        >
+          <thead>
+            <tr>
+              <th data-name="customer">Customer name</th>
+              <th data-name="created_at">Created at</th>
+            </tr>
+          </thead>
         </table>
       </div>
     </div>
@@ -587,8 +609,13 @@
             />
           </div>
           <div class="mb-3">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
+            <label for="created-at" class="col-form-label">Created at:</label>
+            <input
+              id="created-at"
+              class="form-control"
+              type="date"
+              name="created_at"
+            />
           </div>
         </div>
         <div class="modal-footer">
@@ -612,5 +639,14 @@
     console.log("DATA IS ", data);
     Utils.unblock_ui("#add-patient-modal");
     $('#add-patient-modal button[type="cancel"]').trigger("click");
+    Utils.get_datatable(
+      "tbl_customers",
+      Constants.API_BASE_URL + "sample/customers",
+      [{ data: "customer" }, { data: "created_at" }],
+      null,
+      function () {
+        console.log("CALLBACK FIRST");
+      }
+    );
   });
 </script>
