07. Backend project structure and communication wth DB

--- a/live-tutorials-coding/index.html
+++ b/live-tutorials-coding/index.html
@@ -241,6 +241,8 @@
     <script src="./assets/js/toastr.min.js"></script>
     <script src="./assets/js/dataTables-latest.js"></script>
 
+    <script src="./services/patients.js"></script>
+
     <script src="./utils/utils.js"></script>
     <script src="./utils/constants.js"></script>
     <script src="./utils/form_validation.js"></script>
