--- a/dentist-frontent/index.html
+++ b/dentist-frontent/index.html
@@ -10,13 +10,12 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Dashboard - SB Admin</title>
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./assets/css/dataTables-latest.css" rel="stylesheet" />
     <link href="./assets/css/styles.css" rel="stylesheet" />
-    <link href="./assets/css/spapp.css" rel="stylesheet" />
     <link href="./assets/css/spinkit.css" rel="stylesheet" />
+    <link href="./assets/css/spapp.css" rel="stylesheet" />
     <link href="./assets/css/toastr.min.css" rel="stylesheet" />
-    <script src="./assets/js/fontawesome.js" crossorigin="anonymous"></script>
+    <link href="./assets/css/dataTables-latest.css" rel="stylesheet" />
+    <script src="./assets/js/fontawesome.js"></script>
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -253,6 +252,9 @@
     <script src="./utils/constants.js"></script>
     <script src="./utils/utils.js"></script>
     <script src="./js/form-validate.js"></script>
+    <script src="./utils/rest_client.js"></script>
+
+    <script src="./services/PatientService.js"></script>
 
     <script>
       Utils.init_spapp();
