Week 11 materials - JWT

--- a/dentist-frontent/pages/dashboard.html
+++ b/dentist-frontent/pages/dashboard.html
@@ -142,6 +142,15 @@
               name="phone_number"
             />
           </div>
+          <div class="mb-3">
+            <label for="password" class="col-form-label">Password:</label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+            />
+          </div>
         </div>
         <div class="modal-footer">
           <button
