--- a/dentist-frontent/index.html
+++ b/dentist-frontent/index.html
@@ -65,7 +65,7 @@
             <li><a class="dropdown-item" href="#!">Settings</a></li>
             <li><a class="dropdown-item" href="#!">Activity Log</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#!">Logout</a></li>
+            <li><a class="dropdown-item" onclick="Utils.logout();">Logout</a></li>
           </ul>
         </li>
       </ul>
@@ -257,7 +257,11 @@
     <script src="./services/PatientService.js"></script>
 
     <script>
-      Utils.init_spapp();
+      if(Utils.get_from_localstorage('user')){
+        Utils.init_spapp();
+      } else {
+        window.location = 'login';
+      }
     </script>
   </body>
 </html>
