Week 11 materials - JWT Authentication

--- a/live-tutorials-coding/pages/dashboard.html
+++ b/live-tutorials-coding/pages/dashboard.html
@@ -144,6 +144,15 @@
             <label for="email" class="col-form-label">Email:</label>
             <input type="email" class="form-control" name="email" id="email" />
           </div>
+          <div class="mb-3">
+            <label for="password" class="col-form-label">Password:</label>
+            <input
+              type="password"
+              class="form-control"
+              name="password"
+              id="password"
+            />
+          </div>
         </div>
         <div class="modal-footer">
           <button
