--- a/live-tutorials-coding/index.html
+++ b/live-tutorials-coding/index.html
@@ -65,7 +65,9 @@
             <li><a class="dropdown-item" href="#!">Settings</a></li>
             <li><a class="dropdown-item" href="#!">Activity Log</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#!">Logout</a></li>
+            <li>
+              <a class="dropdown-item" onclick="Utils.logout()">Logout</a>
+            </li>
           </ul>
         </li>
       </ul>
@@ -249,7 +251,11 @@
     <script src="./utils/rest_client.js"></script>
 
     <script>
-      Utils.init_spapp();
+      if (Utils.get_from_localstorage("user")) {
+        Utils.init_spapp();
+      } else {
+        window.location = "login";
+      }
     </script>
   </body>
 </html>
